--- a/index.html
+++ b/index.html
@@ -68,68 +68,74 @@
             </thead>
             <tbody>
             </tr>
-            <tr class="item"><td>1</td><td>Coates, Landon</td><td>40</td><td>3</td><td>0</td><td>18</td><td>7</td><td>11</td></tr>
-            <tr class="item"><td>2</td><td>Coates, Spencer</td><td>33</td><td>2</td><td>1</td><td>13</td><td>4</td><td>9</td></tr>
-            <tr class="item"><td>3</td><td>Guenther, Gabby</td><td>33</td><td>1</td><td>0</td><td>4</td><td>1</td><td>3</td></tr>
-            <tr class="item"><td>4</td><td>Blumentritt, Colin</td><td>30</td><td>1</td><td>0</td><td>6</td><td>0</td><td>6</td></tr>
-            <tr class="item"><td>5</td><td>Son, Euji</td><td>29</td><td>2</td><td>2</td><td>15</td><td>17</td><td>-2</td></tr>
-            <tr class="item"><td>6</td><td>Chen, Chris</td><td>29</td><td>1</td><td>0</td><td>6</td><td>3</td><td>3</td></tr>
-            <tr class="item"><td>7</td><td>Blumentritt, Luke</td><td>27</td><td>1</td><td>4</td><td>17</td><td>27</td><td>-10</td></tr>
-            <tr class="item"><td>8</td><td>Ashfeld, Jaxson</td><td>26</td><td>3</td><td>0</td><td>18</td><td>10</td><td>8</td></tr>
-            <tr class="item"><td>9</td><td>Lippert, Quinn</td><td>26</td><td>2</td><td>3</td><td>16</td><td>23</td><td>-7</td></tr>
-            <tr class="item"><td>10</td><td>Kennedy, Cormac</td><td>24</td><td>2</td><td>0</td><td>12</td><td>4</td><td>8</td></tr>
-            <tr class="item"><td>11</td><td>Westberry, Will</td><td>24</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr class="item"><td>12</td><td>Zhao, Isabelle</td><td>22</td><td>4</td><td>0</td><td>24</td><td>9</td><td>15</td></tr>
-            <tr class="item"><td>13</td><td>Yu, Ella</td><td>22</td><td>3</td><td>0</td><td>18</td><td>2</td><td>16</td></tr>
-            <tr class="item"><td>14</td><td>Wu, Olivia</td><td>22</td><td>1</td><td>1</td><td>10</td><td>7</td><td>3</td></tr>
-            <tr class="item"><td>15</td><td>Westberry, Jake</td><td>19</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr class="item"><td>16</td><td>Jin, Johan</td><td>18</td><td>2</td><td>1</td><td>14</td><td>7</td><td>7</td></tr>
-            <tr class="item"><td>17</td><td>Hu, Aileen</td><td>18</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr class="item"><td>18</td><td>Striegel, Harrison</td><td>18</td><td>0</td><td>1</td><td>4</td><td>6</td><td>-2</td></tr>
-            <tr class="item"><td>19</td><td>Brant, Lanie</td><td>17</td><td>1</td><td>2</td><td>7</td><td>16</td><td>-9</td></tr>
-            <tr class="item"><td>20</td><td>Ashfeld, Josie</td><td>16</td><td>2</td><td>2</td><td>14</td><td>13</td><td>1</td></tr>
-            <tr class="item"><td>21</td><td>Brooke, Ivette</td><td>16</td><td>1</td><td>2</td><td>9</td><td>12</td><td>-3</td></tr>
-            <tr class="item"><td>22</td><td>Yergler, Libby</td><td>16</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr class="item"><td>23</td><td>Wang, Xiaohe</td><td>15</td><td>2</td><td>2</td><td>15</td><td>14</td><td>1</td></tr>
-            <tr class="item"><td>24</td><td>Zhang, Aaron</td><td>14</td><td>2</td><td>1</td><td>13</td><td>14</td><td>-1</td></tr>
-            <tr class="item"><td>25</td><td>Ferreira, Noe</td><td>14</td><td>1</td><td>0</td><td>6</td><td>2</td><td>4</td></tr>
-            <tr class="item"><td>26</td><td>Lippert, Landen</td><td>12</td><td>1</td><td>0</td><td>6</td><td>3</td><td>3</td></tr>
-            <tr class="item"><td>27</td><td>Marazita, Ella</td><td>12</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr class="item"><td>28</td><td>Wickey, Teagan</td><td>11</td><td>1</td><td>0</td><td>4</td><td>0</td><td>4</td></tr>
-            <tr class="item"><td>29</td><td>Michaels, Ella</td><td>10</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr class="item"><td>30</td><td>Kirleis, Kenny</td><td>10</td><td>0</td><td>4</td><td>8</td><td>22</td><td>-14</td></tr>
-            <tr class="item"><td>31</td><td>Gao, Norah</td><td>9</td><td>1</td><td>1</td><td>10</td><td>7</td><td>3</td></tr>
-            <tr class="item"><td>32</td><td>Haberland, Hudson</td><td>9</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr class="item"><td>33</td><td>Wei, Emma</td><td>8</td><td>2</td><td>1</td><td>14</td><td>10</td><td>4</td></tr>
-            <tr class="item"><td>34</td><td>Zhao, Annabelle</td><td>8</td><td>1</td><td>2</td><td>9</td><td>13</td><td>-4</td></tr>
-            <tr class="item"><td>35</td><td>Brady, Ben</td><td>8</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr class="item"><td>36</td><td>Ewing, Maya</td><td>6</td><td>0</td><td>1</td><td>0</td><td>6</td><td>-6</td></tr>
-            <tr class="item"><td>37</td><td>Palacios, Andrea</td><td>5</td><td>0</td><td>3</td><td>4</td><td>18</td><td>-14</td></tr>
-            <tr class="item"><td>38</td><td>Narisetty, Vihaan</td><td>4</td><td>1</td><td>0</td><td>6</td><td>0</td><td>6</td></tr>
-            <tr class="item"><td>39</td><td>So, Austin</td><td>4</td><td>1</td><td>0</td><td>6</td><td>4</td><td>2</td></tr>
-            <tr class="item"><td>40</td><td>G, Blake</td><td>4</td><td>1</td><td>1</td><td>7</td><td>6</td><td>1</td></tr>
-            <tr class="item"><td>41</td><td>Zhang, Julie</td><td>4</td><td>1</td><td>1</td><td>7</td><td>8</td><td>-1</td></tr>
-            <tr class="item"><td>42</td><td>Picking, Ben</td><td>4</td><td>1</td><td>2</td><td>11</td><td>14</td><td>-3</td></tr>
-            <tr class="item"><td>43</td><td>Betz, Jack</td><td>4</td><td>1</td><td>2</td><td>8</td><td>17</td><td>-9</td></tr>
-            <tr class="item"><td>44</td><td>Davis, Luke</td><td>4</td><td>1</td><td>2</td><td>6</td><td>12</td><td>-6</td></tr>
-            <tr class="item"><td>45</td><td>Zhao, Kaiyi</td><td>4</td><td>0</td><td>1</td><td>3</td><td>6</td><td>-3</td></tr>
-            <tr class="item"><td>46</td><td>Washington, Tristan</td><td>0</td><td>0</td><td>1</td><td>0</td><td>6</td><td>-6</td></tr>
-            <tr class="item"><td>47</td><td>Serge, Genevieve</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr class="item"><td>48</td><td>Gerber, Meira</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr class="item"><td>49</td><td>Eskander, Anna</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr class="item"><td>50</td><td>Chung, Nathan</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr class="item"><td>51</td><td>Chung, Charlotte</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr class="item"><td>52</td><td>An, Misha</td><td>4</td><td>1</td><td>0</td><td>6</td><td>0</td><td>6</td></tr>
-            <tr class="item"><td>53</td><td>Robert</td><td>0</td><td>0</td><td>1</td><td>4</td><td>6</td><td>-2</td></tr>
-            <tr class="item"><td>54</td><td>Shim, Noah</td><td>0</td><td>0</td><td>1</td><td>4</td><td>6</td><td>-2</td></tr>
-            <tr class="item"><td>55</td><td>Lin, Yuxuan</td><td>0</td><td>0</td><td>1</td><td>3</td><td>6</td><td>-3</td></tr>
-            <tr class="item"><td>56</td><td>Samardzich, Luke</td><td>0</td><td>0</td><td>1</td><td>1</td><td>6</td><td>-5</td></tr>
-            <tr class="item"><td>57</td><td>Zhang, Jeffery</td><td>0</td><td>0</td><td>1</td><td>0</td><td>6</td><td>-6</td></tr>
-            <tr class="item"><td>58</td><td>Gerber, Nina</td><td>0</td><td>0</td><td>2</td><td>6</td><td>12</td><td>-6</td></tr>
-            <tr class="item"><td>59</td><td>Gerber, Meira</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr class="item"><td>60</td><td>Eskander, Anna</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr class="item"><td>61</td><td>Serge, Genevieve</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr class="item"><td>62</td><td>Washington, Tristan</td><td>0</td><td>0</td><td>1</td><td>0</td><td>6</td><td>-6</td></tr>
+            <tr><td>1</td><td class="item">Coates, Spencer</td><td>43</td><td>5</td><td>2</td><td>36</td><td>17</td><td>19</td></tr>
+            <tr><td>2</td><td class="item">Coates, Landon</td><td>41</td><td>4</td><td>3</td><td>31</td><td>27</td><td>4</td></tr>
+            <tr><td>3</td><td class="item">Chen, Chris</td><td>40</td><td>4</td><td>1</td><td>26</td><td>16</td><td>10</td></tr>
+            <tr><td>4</td><td class="item">Son, Euji</td><td>38</td><td>5</td><td>3</td><td>39</td><td>35</td><td>4</td></tr>
+            <tr><td>5</td><td class="item">Guenther, Gabby</td><td>37</td><td>2</td><td>0</td><td>11</td><td>6</td><td>5</td></tr>
+            <tr><td>6</td><td class="item">Blumentritt, Colin</td><td>34</td><td>2</td><td>0</td><td>12</td><td>3</td><td>9</td></tr>
+            <tr><td>7</td><td class="item">Blumentritt, Luke</td><td>34</td><td>4</td><td>5</td><td>40</td><td>40</td><td>0</td></tr>
+            <tr><td>8</td><td class="item">Ashfeld, Jaxson</td><td>33</td><td>5</td><td>1</td><td>30</td><td>20</td><td>10</td></tr>
+            <tr><td>9</td><td class="item">Kennedy, Cormac</td><td>28</td><td>3</td><td>0</td><td>18</td><td>7</td><td>11</td></tr>
+            <tr><td>10</td><td class="item">Zhao, Isabelle</td><td>27</td><td>6</td><td>3</td><td>42</td><td>29</td><td>13</td></tr>
+            <tr><td>11</td><td class="item">Ashfeld, Josie</td><td>26</td><td>5</td><td>2</td><td>32</td><td>17</td><td>15</td></tr>
+            <tr><td>12</td><td class="item">Jin, Johan</td><td>26</td><td>5</td><td>4</td><td>39</td><td>32</td><td>7</td></tr>
+            <tr><td>13</td><td class="item">Lippert, Quinn</td><td>26</td><td>3</td><td>4</td><td>24</td><td>30</td><td>-6</td></tr>
+            <tr><td>14</td><td class="item">Yu, Ella</td><td>25</td><td>4</td><td>1</td><td>25</td><td>8</td><td>17</td></tr>
+            <tr><td>15</td><td class="item">Sorgic, Lucas</td><td>25</td><td>1</td><td>0</td><td>6</td><td>2</td><td>4</td></tr>
+            <tr><td>16</td><td class="item">Westberry, Will</td><td>24</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+            <tr><td>17</td><td class="item">Wu, Olivia</td><td>24</td><td>2</td><td>2</td><td>22</td><td>14</td><td>8</td></tr>
+            <tr><td>18</td><td class="item">Brant, Lanie</td><td>21</td><td>3</td><td>4</td><td>22</td><td>33</td><td>-11</td></tr>
+            <tr><td>19</td><td class="item">Zhang, Aaron</td><td>21</td><td>4</td><td>1</td><td>26</td><td>23</td><td>3</td></tr>
+            <tr><td>20</td><td class="item">Wang, Xiaohe</td><td>20</td><td>4</td><td>3</td><td>24</td><td>23</td><td>1</td></tr>
+            <tr><td>21</td><td class="item">Striegel, Harrison</td><td>20</td><td>1</td><td>2</td><td>12</td><td>14</td><td>-2</td></tr>
+            <tr><td>22</td><td class="item">Lippert, Landen</td><td>19</td><td>3</td><td>1</td><td>20</td><td>11</td><td>9</td></tr>
+            <tr><td>23</td><td class="item">Westberry, Jake</td><td>19</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+            <tr><td>24</td><td class="item">Borders, Davis</td><td>19</td><td>0</td><td>2</td><td>3</td><td>12</td><td>-9</td></tr>
+            <tr><td>25</td><td class="item">Brooke, Ivette</td><td>17</td><td>2</td><td>3</td><td>17</td><td>20</td><td>-3</td></tr>
+            <tr><td>26</td><td class="item">Hu, Aileen</td><td>17</td><td>0</td><td>1</td><td>4</td><td>6</td><td>-2</td></tr>
+            <tr><td>27</td><td class="item">Striegel, Hayden</td><td>17</td><td>2</td><td>0</td><td>12</td><td>5</td><td>7</td></tr>
+            <tr><td>28</td><td class="item">Wickey, Teagan</td><td>15</td><td>2</td><td>0</td><td>10</td><td>1</td><td>9</td></tr>
+            <tr><td>29</td><td class="item">Yergler, Libby</td><td>15</td><td>0</td><td>1</td><td>2</td><td>6</td><td>-4</td></tr>
+            <tr><td>30</td><td class="item">Gao. Norah</td><td>14</td><td>3</td><td>3</td><td>26</td><td>21</td><td>5</td></tr>
+            <tr><td>31</td><td class="item">Zhao, Annabelle</td><td>13</td><td>3</td><td>3</td><td>22</td><td>24</td><td>-2</td></tr>
+            <tr><td>32</td><td class="item">Ferreira, Noe</td><td>12</td><td>1</td><td>2</td><td>7</td><td>14</td><td>-7</td></tr>
+            <tr><td>33</td><td class="item">Marazita, Ella</td><td>12</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+            <tr><td>34</td><td class="item">Shook, Max</td><td>12</td><td>1</td><td>1</td><td>6</td><td>7</td><td>-1</td></tr>
+            <tr><td>35</td><td class="item">Michaels, Ella</td><td>10</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+            <tr><td>36</td><td class="item">Slott, Myles</td><td>10</td><td>1</td><td>0</td><td>6</td><td>3</td><td>3</td></tr>
+            <tr><td>37</td><td class="item">Haberland, Hudson</td><td>9</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+            <tr><td>38</td><td class="item">Kirleis, Kenny</td><td>7</td><td>1</td><td>7</td><td>20</td><td>42</td><td>-22</td></tr>
+            <tr><td>39</td><td class="item">Zhang, Julie</td><td>7</td><td>2</td><td>1</td><td>13</td><td>8</td><td>5</td></tr>
+            <tr><td>40</td><td class="item">Brady, Ben</td><td>6</td><td>0</td><td>2</td><td>5</td><td>13</td><td>-8</td></tr>
+            <tr><td>41</td><td class="item">Wei, Emma</td><td>5</td><td>2</td><td>3</td><td>19</td><td>20</td><td>-1</td></tr>
+            <tr><td>42</td><td class="item">Pontius. Penelope</td><td>5</td><td>0</td><td>1</td><td>1</td><td>6</td><td>-5</td></tr>
+            <tr><td>43</td><td class="item">Ewing, Maya</td><td>4</td><td>0</td><td>2</td><td>3</td><td>12</td><td>-9</td></tr>
+            <tr><td>44</td><td class="item">So, Austin</td><td>4</td><td>1</td><td>0</td><td>6</td><td>4</td><td>2</td></tr>
+            <tr><td>45</td><td class="item">Bao, Fiona</td><td>4</td><td>1</td><td>0</td><td>6</td><td>3</td><td>3</td></tr>
+            <tr><td>46</td><td class="item">G, Blake</td><td>3</td><td>1</td><td>1</td><td>7</td><td>6</td><td>1</td></tr>
+            <tr><td>47</td><td class="item">Narisetty, Vihaan</td><td>3</td><td>1</td><td>1</td><td>8</td><td>6</td><td>2</td></tr>
+            <tr><td>48</td><td class="item">Robert</td><td>3</td><td>1</td><td>1</td><td>10</td><td>7</td><td>3</td></tr>
+            <tr><td>49</td><td class="item">Betz, Jack</td><td>2</td><td>1</td><td>2</td><td>8</td><td>17</td><td>-9</td></tr>
+            <tr><td>50</td><td class="item">Zhao, Kaiyi</td><td>2</td><td>0</td><td>2</td><td>5</td><td>12</td><td>-7</td></tr>
+            <tr><td>51</td><td class="item">Picking, Ben</td><td>1</td><td>1</td><td>3</td><td>12</td><td>20</td><td>-8</td></tr>
+            <tr><td>52</td><td class="item">An, Misha</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+            <tr><td>53</td><td class="item">Chung, Charlotte</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+            <tr><td>54</td><td class="item">Chung, Nathan</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+            <tr><td>55</td><td class="item">Davis, Luke</td><td>0</td><td>1</td><td>4</td><td>15</td><td>25</td><td>-10</td></tr>
+            <tr><td>56</td><td class="item">Eskander, Anna</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+            <tr><td>57</td><td class="item">Gerber, Meira</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+            <tr><td>58</td><td class="item">Gerber, Nina</td><td>0</td><td>0</td><td>2</td><td>6</td><td>12</td><td>-6</td></tr>
+            <tr><td>59</td><td class="item">Lin, Yuxuan</td><td>0</td><td>0</td><td>3</td><td>3</td><td>18</td><td>-15</td></tr>
+            <tr><td>60</td><td class="item">Palacios, Andrea</td><td>0</td><td>0</td><td>5</td><td>8</td><td>30</td><td>-22</td></tr>
+            <tr><td>61</td><td class="item">Serge, Geneveive</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+            <tr><td>62</td><td class="item">Shim, Noah</td><td>0</td><td>0</td><td>1</td><td>4</td><td>6</td><td>-2</td></tr>
+            <tr><td>63</td><td class="item">Washington, Tristan</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+            <tr><td>64</td><td class="item">Zhang, Jeffery</td><td>0</td><td>0</td><td>1</td><td>0</td><td>6</td><td>-6</td></tr>
+            <tr><td>65</td><td class="item">Patel, Vyomi</td><td>0</td><td>0</td><td>1</td><td>3</td><td>6</td><td>-3</td></tr>
+            <tr><td>66</td><td class="item">Magyar, Blake</td><td>0</td><td>0</td><td>1</td><td>2</td><td>6</td><td>-4</td></tr>
+            <tr><td>67</td><td class="item">Samardzich, Luke</td><td>0</td><td>0</td><td>1</td><td>1</td><td>6</td><td>-5</td></tr>
+
         
 
             </tbody>
