--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
     <title>Lakeland Ranking</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
-<header>
-    <div class="menuContainer">
-        <nav class="menu">
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="https://lakelandacademyoftennis.com/">LAKELAND</a></li>
-                <li><a href="https://shop.lakelandacademyoftennis.com/">OUR STRINGS</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
-
 <body>
+        <header>
+        <div class="menuContainer">
+            <h1>Lakeland Ranking</h1>
+            <!-- Ícone de menu hambúrguer -->
+            <div class="menu-toggle" onclick="toggleMenu()" aria-label="Open Menu">☰</div>
+            <nav class="menu"> <!-- Remover "hidden" -->
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="https://lakelandacademyoftennis.com/">LAKELAND</a></li>
+                    <li><a href="https://shop.lakelandacademyoftennis.com/">OUR STRINGS</a></li>
+                </ul>
+            </nav>            
+        </div>
+    </header>
     <main>
         <div class="special-awards">        
             <div class="award" id="topPlayer">
